react component in Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- <app-header></app-header> -->
+<app-header-wrapper></app-header-wrapper>
 <div class="angular-app-container">
     <h1>Angular Component</h1>
     <div>value from React: {{reactValue}}</div>
