--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-header></app-header> -->
-<app-header-wrapper></app-header-wrapper>
+<app-header-wrapper [appNotificationCounter]=appNotificationCounter></app-header-wrapper>
 <div class="angular-app-container">
     <h1>Angular Component</h1>
     <div>value from React: {{reactValue}}</div>
@@ -8,6 +8,6 @@
     <button (click)="increment()">Increment</button>
     
     <hr />
-    Send to React
-    <input (keyup)="onKey($event)">
+    
+    <button (click)="notification($event)">Increase Notification Count</button>
 </div>
