--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
-<!-- <app-header></app-header> -->
-<app-header-wrapper [appNotificationCounter]=appNotificationCounter></app-header-wrapper>
 <div class="angular-app-container">
-    <h1>Angular Component</h1>
-    <div>value from React: {{reactValue}}</div>
-    <hr />
-    <div> Hello!: {{ counter }} </div>
-    <button (click)="increment()">Increment</button>
-    
-    <hr />
-    
-    <button (click)="notification($event)">Increase Notification Count</button>
+  <app-header-wrapper
+    [appNotificationCounter]="appNotificationCounter"
+  ></app-header-wrapper>
+  <h1>Angular Component</h1>
+  <div>value from React: {{ reactValue }}</div>
+  <hr />
+  <div>Hello!: {{ counter }}</div>
+  <button (click)="increment()">Increment</button>
+
+  <hr />
+
+  <button (click)="notification($event)">Increase Notification Count</button>
 </div>
+<p style="border: 1px solid red;">Red borders is around an Angular component</p>
+<p style="border: 1px solid blue;">Blue border is around a React component</p>
