--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
   <hr />
 
+  <p>Note: this will trigger changed and re-render the full component. That's not good</p>
   <button (click)="notification($event)">Increase Notification Count</button>
 </div>
 <p style="border: 1px solid red;">Red borders is around an Angular component</p>
