--- a/src/app/notification/notification.component.html
+++ b/src/app/notification/notification.component.html
@@ -1,3 +1,4 @@
 <div style="border: 1px solid red">
-  <p>notifications {{ counter }}</p>
+  <h3>Notification Component</h3>
+  <p>{{ counter }}</p>
 </div>
